--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     image: gcr.io/prysmaticlabs/prysm/beacon-chain:${IMAGE_VERSION_TAG}
     restart: always
     hostname: beacon-chain
-    command: |
-      --datadir=/data \
-      --p2p-host-ip=${PUBLIC_IP} \
-      --p2p-host-dns=${PUBLIC_HOST_DNS} \
-      --p2p-tcp-port=${PUBLIC_TCP_PORT}
+    command:
+      - "--datadir=/data"
+      - "--p2p-host-ip=${PUBLIC_IP}"
+      - "--p2p-host-dns=${PUBLIC_HOST_DNS}"
+      - "--p2p-tcp-port=${PUBLIC_TCP_PORT}"
     ports:
       - ${PUBLIC_TCP_PORT}:13000
-      - 12000:12000
+      - 12000:12000/udp
     volumes:
       - ./beacon:/data
     tty: true
@@ -29,12 +29,12 @@ services:
     hostname: validator
     depends_on:
       - beacon
-    command: |
-      --beacon-rpc-provider=beacon:4000 \
-      --keymanager=keystore \
-      --keymanageropts=/data/keystore.json \
-      --enable-account-metrics \
-      --graffit=${GRAFFITI}
+    command:
+      - "--beacon-rpc-provider=beacon:4000"
+      - "--keymanager=keystore"
+      - "--keymanageropts=/data/keystore.json"
+      - "--enable-account-metrics"
+      - "--graffit=${GRAFFITI}"
     volumes:
       - ./validator:/data
     tty: true
@@ -51,9 +51,9 @@ services:
     hostname: slasher
     depends_on:
       - beacon
-    command: |
-      --beacon-rpc-provider=beacon:4000 \
-      --datadir=/data
+    command:
+      - "--beacon-rpc-provider=beacon:4000"
+      - "--datadir=/data"
     volumes:
       - ./slasher:/data
     tty: true
@@ -68,9 +68,9 @@ services:
     image: prom/prometheus
     restart: on-failure
     hostname: prometheus
-    command: |
-      --storage.tsdb.retention.time=31d \
-      --config.file=/etc/prometheus/prometheus.yml
+    command:
+      - "--storage.tsdb.retention.time=31d"
+      - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
       - 127.0.0.1:9090:9090
     volumes:
