--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,17 @@ services:
     restart: always
     hostname: geth
     command:
-      - --goerli
-      - '--rpc --rpcport=8545 --rpcaddr=0.0.0.0 --rpcvhosts="*"'
-      - '--ws --wsaddr=0.0.0.0 --wsport=8546 --wsorigins="*"'
+      - "--goerli"
+      - "--rpc"
+      - "--rpcport=8545"
+      - "--rpcaddr=0.0.0.0"
+      - "--ws"
+      - "--wsaddr=0.0.0.0"
+      - "--wsport=8546"
+      - '--wsorigins="*"'
+      - '--rpcvhosts="*"'
+      - "--allow-insecure-unlock"
+      - '--rpcapi="db,eth,net,web3,personal"'
     ports:
       - 30303:30303/tcp
       - 30303:30303/udp
@@ -26,15 +34,15 @@ services:
 
   beacon:
     container_name: beacon-chain
-    image: gcr.io/prysmaticlabs/prysm/beacon-chain:${IMAGE_VERSION_TAG}
+    image: gcr.io/prysmaticlabs/prysm/beacon-chain:${PRYSM_DOCKER_TAG}
     restart: always
     hostname: beacon-chain
     depends_on:
       - geth
-    command: "--config-file=/config/beacon.yaml"
+    command: --config-file=/config/beacon.yaml
     ports:
-      - 13000:13000
-      - 12000:12000/udp
+      - "13000:13000"
+      - "12000:12000"
     dns:
       - 1.1.1.1
     volumes:
@@ -44,12 +52,12 @@ services:
 
   validator:
     container_name: validator
-    image: gcr.io/prysmaticlabs/prysm/validator:${IMAGE_VERSION_TAG}
+    image: gcr.io/prysmaticlabs/prysm/validator:${PRYSM_DOCKER_TAG}
     restart: on-failure
     hostname: validator
     depends_on:
       - beacon
-    command: "--config-file=/config/validator.yaml"
+    command: --config-file=/config/validator.yaml
     volumes:
       - ./config/validator.yaml:/config/validator.yaml:ro
       - ./validator:/data
@@ -57,12 +65,12 @@ services:
 
   slasher:
     container_name: slasher
-    image: gcr.io/prysmaticlabs/prysm/slasher:${IMAGE_VERSION_TAG}
+    image: gcr.io/prysmaticlabs/prysm/slasher:${PRYSM_DOCKER_TAG}
     restart: always
     hostname: slasher
     depends_on:
       - beacon
-    command: "--config-file=/config/slasher.yaml"
+    command: --config-file=/config/slasher.yaml
     volumes:
       - ./config/slasher.yaml:/config/slasher.yaml:ro
       - ./slasher:/data
@@ -77,7 +85,7 @@ services:
       - "--storage.tsdb.retention.time=31d"
       - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
-      - 9090:9090
+      - "9090:9090"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     <<: *logging
@@ -90,7 +98,7 @@ services:
     depends_on:
       - prometheus
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
     <<: *logging
