--- a/config/beacon.yaml
+++ b/config/beacon.yaml
@@ -8,19 +8,21 @@
 datadir: /data
 
 #######################
-# Connectivity settings 
+# Connectivity settings
 p2p-host-ip: ""
 p2p-host-dns: ""
 
 rpc-host: 0.0.0.0
 
 # disable scan of local network
-p2p-denylist: ["10.0.0.0/8","172.16.0.0/12","192.168.0.0/16","100.64.0.0/10","169.254.0.0/16"]
+p2p-denylist:
+  [
+    "10.0.0.0/8",
+    "172.16.0.0/12",
+    "192.168.0.0/16",
+    "100.64.0.0/10",
+    "169.254.0.0/16",
+  ]
 
 # changing this also needs to be changed in docker-compose.yaml!
 p2p-tcp-port: 13000
-
-##############################
-# Connection to geth container
-http-web3provider: http://geth:8545
-web3provider: ws://geth:8546
