--- a/config/validator.yaml
+++ b/config/validator.yaml
@@ -7,9 +7,11 @@
 
 datadir: /data
 graffiti: ""
+
 ##############
 # Connectivity
 beacon-rpc-provider: beacon:4000
+monitoring-host: 0.0.0.0
 
 #####################################
 # Validator accounts & key management
