feat(beacon): limit p2p peers

--- a/config/beacon.yaml
+++ b/config/beacon.yaml
@@ -10,6 +10,7 @@ datadir: /data
 #######################
 # Connectivity settings
 p2p-host-ip: ""
+p2p-max-peers: 30
 
 rpc-host: 0.0.0.0
 monitoring-host: 0.0.0.0
