--- a/config/beacon.yaml
+++ b/config/beacon.yaml
@@ -27,3 +27,8 @@ p2p-denylist:
 
 # changing this also needs to be changed in docker-compose.yaml!
 p2p-tcp-port: 13000
+
+#######################
+# Slasher
+enable-slasher: true
+slasher-provider: slasher:4002
