ci: add yamllint

--- a/.github/workflows/check-files.yml
+++ b/.github/workflows/check-files.yml
@@ -16,3 +16,6 @@ jobs:
 
       - name: Docker Compose Lint
         run: docker-compose config --quiet
+
+      - name: yaml-lint
+        uses: ibiqlik/action-yamllint@v1
