ci: fix double runs

--- a/.github/workflows/check-files.yml
+++ b/.github/workflows/check-files.yml
@@ -1,8 +1,11 @@
 # Check files
 name: CI
 
-# Trigger the workflow on push or pull request
-on: [push, pull_request]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: ["*"]
 
 jobs:
   check:
