--- a/create-account.yml
+++ b/create-account.yml
@@ -3,6 +3,9 @@ services:
   validator-create-account:
     container_name: validator-create-account
     image: gcr.io/prysmaticlabs/prysm/validator:${PRYSM_DOCKER_TAG}
-    command: accounts create --keystore-path=/data --password=${CREATE_ACCOUNT_PASSWORD}
+    command:
+      - "accounts create"
+      - "--keystore-path=/data"
+      - "--password=${CREATE_ACCOUNT_PASSWORD}"
     volumes:
       - ./validator:/data
