feat: mount prom data volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,11 +59,13 @@ services:
     hostname: prometheus
     command:
       - "--storage.tsdb.retention.time=31d"
+      - "--storage.tsdb.path=/data"
       - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/data:/data
     <<: *logging
 
   grafana:
