--- a/infra/packer/playbook.yml
+++ b/infra/packer/playbook.yml
@@ -37,10 +37,6 @@
         id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
         state: present
 
-    - name: get distro codename
-      shell: lsb_release -cs
-      register: distro_codename
-
     - name: setup stable Docker repo
       apt_repository:
         repo: "deb https://download.docker.com/linux/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable"
@@ -61,11 +57,22 @@
         state: started
         enabled: yes
 
-    - name: add users to Docker group
+    - name: add user to Docker group
       user:
         name: ubuntu
         groups: docker
         append: yes
+
+    - name: get docker-compose
+      get_url:
+        url: "https://github.com/docker/compose/releases/download/1.26.0/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}"
+        dest: /usr/local/bin/docker-compose
+        mode: a+x
+
+    - name: upgrade all packages
+      apt:
+        upgrade: yes
+        update_cache: yes
 
     - name: remove useless package files and dangling dependencies
       apt:
