--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-PRYSM_DOCKER_TAG=HEAD-fa85d9
+PRYSM_DOCKER_TAG=v1.0.0-beta.3
 CREATE_ACCOUNT_PASSWORD=put-your-password-here!
 
 HTTP_WEB3PROVIDER=https://goerli.infura.io/v3/PROJECT_ID
